...
"line_height" = "Line spacing";
"paper" = "Paper";
"light" = "Light";
"dark" = "Dark";
"encoding" = "Text encoding";
"position" = "Playback position";
"loop" = "Repeat one";
"minimize" = "Minimize";
"share_media" = "Share media";
"share_page" = "Share page";
"done" = "Done";
"cancel" = "Cancel";
"stop" = "Stop";
...
